[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minibump"
version = "0.0.0"
description = "Bump versions in changelogs and pyprojects"
license = {text = "MIT"}
authors = [{name = "Loïc Grobol", email = "loic.grobol@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.9"
dependencies = [
    "click >= 8",
    "keepachangelog",
    "semver >= 2.10",
    "tomlkit",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
minibump = "minibump.main:cli"

[tool.mypy]
allow_redefinition = true
warn_unreachable = true

[tool.black]
line-length = 100
