[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minibump"
version = "0.0.0"
description = "Bump versions in changelogs and pyprojects"
license = {text = "MIT"}
authors = [{name = "Loïc Grobol", email = "loic.grobol@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "click >= 8",
    "keepachangelog",
    "semver >= 2.10",
    "temppathlib",
    "tomlkit",
]
[project.optional-dependencies]
lint = [
    "black",
    "flakeheaven",
    "flake8-bugbear",
    "flake8-pytest-style",
    "mypy",
]
tests = [
    "freezegun >= 1",
    "pytest",
    "pytest-console-scripts",
    "pytest-datadir",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
minibump = "minibump.main:cli"

[tool.setuptools]
packages = ["minibump"]

[tool.mypy]
warn_unreachable = true

[tool.black]
line-length = 100

[tool.flakeheaven.plugins]
bugbear = ["+*"]
pycodestyle = ["+*", "-W503", "-E501"]
pyflakes = ["+*", "-E203", "-E266"]
pytest-style = ["+*"]

[tool.isort]
profile = "black"

[tool.bandit]
assert_used.skips = ["tests/test_*.py"]